--- a/phase01/task07/style.css
+++ b/phase01/task07/style.css
@@ -371,7 +371,7 @@ textarea{
 
 footer{
   width: 100%;
-  height: 443px;
+  height: 423px;
   padding-top:100px;
   background-color: #32363e;
   color: white;
@@ -391,10 +391,11 @@ footer .footerCont input{
   margin:30px 0 50px 0;
 }
 footer .footerCont .btn5{
-  width: 70px;
+  width: 80px;
   height: 44px;
   font-size: 16px;
   background-color: #6f7178;
+  letter-spacing: 4px;
   color: white;
   border: none;
 }
@@ -403,15 +404,16 @@ footer .footerCont img{
 }
 .footerBot{
   width: 100%;
-  height: 100px;
+  height: 80px;
   background-color: #2f2f38;
+  font-size:12px;
 }
 .footerBot .footerLeft{
   float: left;
-  margin:40px 0 0 120px;
+  margin:30px 0 0 120px;
 }
 .footerBot .footerRight{
   float: right;
-  margin:40px 120px 0 0;
+  margin:30px 120px 0 0;
   color: white;
 }
