--- a/phase01/task07/style.css
+++ b/phase01/task07/style.css
@@ -155,9 +155,10 @@ nav ul li:hover a,.red a{
   font-weight: 200;
   margin-top: 15px;
 }
-.form1 select,.form1 button{
+
+.form1 .nation,.province,.city,.form1 button{
   margin: 50px 20px 0 0;
-  width: 236px;
+  width: 222px;
   height: 36px;
 }
 .form1 .search{
@@ -166,27 +167,39 @@ nav ul li:hover a,.red a{
   color:white;
   font-size: 18px;
 }
-.form1 select{
-  border: 1px solid  #fff;
-  appearance:none;
-  -moz-appearance:none;
-  -webkit-appearance:none;
+.form1 .nation,.province,.city{
+  border: none;
+  outline:none;
   background:url('img/down.jpg') no-repeat scroll right center transparent;
-   padding-right: 14px;
+  padding-left: 14px;
 }
-.form1 select::-ms-expand{
-  display: none;
+.nation:focus,.province:focus,.city:focus{
+  border: 1px solid #be4f48;
+}
+.form1 .proList{
+  list-style: none;
+  position: absolute;
+  margin-left: 347px;
+  width: 236px;
+  height: 180px;
+  background-color: #e3e3e4;
+  border: 1px solid #be4f48;
+  text-align: left;
+}
+.form1 .proList li{
+  height: 30px;
+  font-size: 14px;
+  color:#89898a;
+  font-weight: 500;
+  line-height: 30px;
+  padding-left: 36px;
+}
+.form1 .proList li:hover{
+  background:url('img/selected.jpg') no-repeat;
+  color:white;
+  cursor: pointer;
 }
 
-.form1 option{
-  background-color:#e3e3e4;
-  font-size: 14px;
-  height:27px;
-  color:#5f6061;
-}
-.form1 option:checked{
-  background-color: #be4e48;
-}
 .section23{
   width: 100%;
   height: 600px;
